# Gomoku

./: BlackStone.cpp  BlackStone.h  Board.cpp  Board.h  BoardLogic.cpp  BoardLogic.h  CMakeLists.txt  Constants.h  Doxyfile  FileManager.cpp  FileManager.h  Game.cpp  Game.h  GameOver.cpp  GameOver.h  GameStart.cpp  GameStart.h  Gomoku UML v1.mdj  Gomoku UML.mdj  README.md  Stone.cpp  Stone.h  TextureManager.cpp  TextureManager.h  WhiteStone.cpp  WhiteStone.h  WinWays.cpp  WinWays.h  main.cpp
cmake_modules/: FindSFML.cmake
dokumentacjaHTML/: _black_stone_8cpp.html  _black_stone_8cpp_source.html  _black_stone_8h.html  _black_stone_8h_source.html  _board_8cpp_source.html  _board_8h_source.html  _board_logic_8cpp_source.html  _board_logic_8h_source.html  _constants_8h_source.html  _file_manager_8cpp.html  _file_manager_8cpp_source.html  _file_manager_8h_source.html  _game_8cpp.html  _game_8cpp_source.html  _game_8h_source.html  _game_over_8cpp_source.html  _game_over_8h.html  _game_start_8cpp.html  _game_start_8cpp_source.html  _game_start_8h.html  _game_start_8h_source.html  _stone_8cpp_source.html  _stone_8h.html  _stone_8h_source.html  _white_stone_8cpp.html  _white_stone_8h.html  _win_ways_8cpp.html  _win_ways_8cpp_source.html  _win_ways_8h_source.html  class_black_stone-members.html  class_board-members.html  class_board.html  class_board_logic-members.html  class_file_manager.html  class_game.html  class_game_start-members.html  class_game_start.html  class_stone.html  class_white_stone-members.html  class_white_stone.html  (+5 more)
dokumentacjaLaTeX/: _board_logic_8cpp.tex  (+19 more)
(+118 files in other folders)
